@@ -143,7 +143,7 @@ Status_4_Evar.prototype =
 			},
 			updateWindow: function(win)
 			{
-				win.caligon.status4evar.updateWindowGripper(true);
+				win.caligon.status4evar.windowGripper.update(true);
 			}
 		},
 
