@@ -1,5 +1,6 @@
 Version next
 * Re-write status pop-up binding to support Firefox 12+
+* Tear down S4E bindings on window destruction. I don't know of there being any reported memory leaks, so this is a 'just in case' measure.
 
 Version 2012.01.14.17
 * Fix the mock location bar in the preference window.
